<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_media_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/exoplayer_margin"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/iv_novideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:contentDescription="@string/no_video_available"
            android:src="@drawable/novideoavailable"/>

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/tv_step_long_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="@dimen/cardview_margin"
            android:overScrollMode="ifContentScrolls"
            android:textSize="@dimen/textsize_h1" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/cardview_margin"
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bu_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="buttonPreviousClicked"
            android:text="@string/previous_button_text" />

        <Button
            android:id="@+id/bu_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="buttonNextClicked"
            android:text="@string/next_button_text" />
    </LinearLayout>

</LinearLayout>